검은색 회사 로고 선택지 적용. 이메일 입력박스 우측 radius 적용

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,8 @@
 .text-red {
     color: red;
 }
+
+#emailId2 {
+    border-top-right-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+}
